git-svn-id: https://iritgo-aktera.googlecode.com/svn/trunk@27 71e8ea69-9a4e-8955-45a5-bfab6559e1dc

--- a/translations/translations_en.txt
+++ b/translations/translations_en.txt
@@ -226,7 +226,7 @@
 "Antigua und Barbuda";"Antigua and Barbuda"
 "Anwahloptionen";"Calling options"
 "Anwesend";"Present"
-"Anwesendheit-Status ändern";"Edit presence state"
+"Anwesenheits-Status ändern";"Edit presence state"
 "Anzahl Benutzer";"Number of users"
 "Anzahl abzuschneidender Ziffern";"Number of digits to truncate"
 "Anzahl der Audio-Samples";""
